Fixing Main for report.csv